modules/wycs/tests/valid/test_104.wyal
define Closure({int,int} pairs) as:
  forall(int x, int y, int z):
    if:
      (x, y) ∈ pairs
      (y, z) ∈ pairs 
    then:
      (x,y) ∈ pairs 

assert Closure({(1,2),(2,3),(1,3)})


